# openIoT

./: .gitignore  Cargo.toml  Makefile  README.md  build.bat  creates_mirros.bat  run_device.bat  rust_D.reg  rust_mirros.reg  virtual_device.py
client/: Cargo.toml
client/src/: api.rs  main.rs
client/src/views/: dashboard_view.rs  login_view.rs  mod.rs
esp32/: config.py  device.py  main.py  mesh.py  protocol.py  provision.py
server/: Cargo.toml
server/src/: auth.rs  db.rs  handlers.rs  main.rs
server/static/: app.js  index.html  style.css
shared/src/: protocol.rs  types.rs
