[package]
name = "openiot-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
eframe = { version = "0.28", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
